# whisper-client-cpp

./: .gitignore  CMakeLists.txt
resources/: resources.qrc
src/: CMakeLists.txt  main.cpp
src/audio/: audio_capture.cpp  audio_capture.hpp  audio_processor.cpp  audio_processor.hpp  model_manager.cpp  model_manager.hpp
src/input/: hotkey_manager.cpp  hotkey_manager.hpp
src/network/: websocket_client.cpp  websocket_client.hpp
src/ui/: main_window.cpp  main_window.hpp  settings_frame.cpp  settings_frame.hpp  status_frame.cpp  status_frame.hpp  transcript_frame.cpp  transcript_frame.hpp
test/: CMakeLists.txt  main_test.cpp
